--- a/myapp/templates/shopify/about.html
+++ b/myapp/templates/shopify/about.html
@@ -82,7 +82,7 @@
     <!-- ***** Main Banner Area End ***** -->
 
     <!-- ***** About Area Starts ***** -->
-    <div class="about-us">
+    <!-- <div class="about-us">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="right-content">
-                        <h4>About Us &amp; Our Skills</h4>
+                        <h4>About Us</h4>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod kon tempor incididunt ut labore.</span>
                         <div class="quote">
                             <i class="fa fa-quote-left"></i><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiuski smod kon tempor incididunt ut labore.</p>
@@ -108,11 +108,11 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ***** About Area Ends ***** -->
 
     <!-- ***** Our Team Area Starts ***** -->
-    <section class="our-team">
+    <!-- <section class="our-team">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -186,11 +186,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Our Team Area Ends ***** -->
 
     <!-- ***** Services Area Starts ***** -->
-    <section class="our-services">
+    <!-- <section class="our-services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -222,7 +222,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- ***** Services Area Ends ***** -->
 
     <!-- ***** Footer Start ***** -->
