--- a/myapp/templates/shopify/contact.html
+++ b/myapp/templates/shopify/contact.html
@@ -96,7 +96,7 @@
                         <h2>Say Hello. Don't Be Shy!</h2>
                         <span>Details to details is what makes Hexashop different from the other themes.</span>
                     </div>
-                    <form id="contact" action="" method="post">
+                    <form id="contact" >
                         <div class="row">
                           <div class="col-lg-6">
                             <fieldset>
